# ZFC

./: .gitignore  Makefile  pyproject.toml
.github/workflows/: build.yml  lint.yml  release.yml
src/zfc/: natural_number.py
tests/: test_zfc.py
